--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
   text-decoration: none;
   list-style-type: none;
 }
+* ::-webkit-scrollbar {
+  display: none;
+}
 
 .container {
   max-width: 1140px;
@@ -72,6 +75,10 @@ header nav .header-wrapper button {
   font-weight: 600;
   line-height: normal;
   color: white;
+}
+header nav .header-wrapper button:hover {
+  background: #0c331c;
+  transition: all 0.2s linear;
 }
 header nav .header-wrapper button span {
   top: 10px;
@@ -206,6 +213,11 @@ header nav .responsiv {
   gap: 10px;
   color: black;
 }
+.header-bottom li a button:hover {
+  background: #2b327b;
+  transition: all 0.2s linear;
+  color: white;
+}
 
 main {
   padding-top: 220px;
@@ -262,6 +274,10 @@ main #intro .intro-wrapper .intro-left div button {
   background: #33836E;
   border: none;
   cursor: pointer;
+}
+main #intro .intro-wrapper .intro-left div button:hover {
+  background: #0c331c;
+  transition: all 0.2s linear;
 }
 main #intro .intro-wrapper .intro-left div div {
   display: block;
@@ -794,6 +810,10 @@ main #intro .intro-wrapper .intro-right img {
   background: transparent;
   cursor: pointer;
 }
+.hot_linii .hot_linii-right div button:hover {
+  background: #0c331c;
+  transition: all 0.2s linear;
+}
 .hot_linii .hot_linii-right p:last-child a {
   color: rgba(255, 255, 255, 0.5);
   font-size: 12px;
@@ -1132,6 +1152,10 @@ main #intro .intro-wrapper .intro-right img {
   padding: 16px 36px 18px 36px;
   background: #33836E;
   cursor: pointer;
+}
+.quessions_we div button:hover {
+  background: #0c331c;
+  transition: all 0.2s linear;
 }
 
 @media only screen and (max-width: 390px) {
@@ -1505,6 +1529,10 @@ main #intro .intro-wrapper .intro-right img {
   border: none;
   cursor: pointer;
 }
+#portal .container .portal .portal-right form div button:hover {
+  background: #000000;
+  transition: all 0.2s linear;
+}
 #portal .container .portal .portal-right p:nth-child(5) {
   color: rgba(255, 255, 255, 0.5);
   font-size: 12px;
@@ -1617,6 +1645,253 @@ main #intro .intro-wrapper .intro-right img {
   }
   #portal .container .portal .portal-right ul li p {
     font-size: 14px !important;
+  }
+}
+#popup-wrapper {
+  width: 100%;
+  height: 100%;
+  display: none;
+  padding-top: 300px;
+}
+#popup-wrapper .popup {
+  z-index: 1110;
+  gap: 30px;
+  position: fixed;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  margin: 0 auto;
+  width: 896px;
+  height: 397px;
+  border-radius: 20px;
+  background: var(--Base-White, #FFF);
+  display: none;
+  box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.1);
+  margin-left: 120px;
+}
+#popup-wrapper .popup div {
+  width: 577px;
+}
+#popup-wrapper .popup div span {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+}
+#popup-wrapper .popup div h4 {
+  padding-top: 55px;
+  color: var(--Base-Black, #140A32);
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: -0.96px;
+  margin-bottom: 20px;
+}
+#popup-wrapper .popup div .imgs {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+#popup-wrapper .popup div .imgs p {
+  color: var(--Base-Black, #140A32);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+#popup-wrapper .popup div .buttons {
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#popup-wrapper .popup div .buttons label {
+  display: flex;
+  flex-direction: column;
+  padding: 7px 16px 8px 16px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 3px;
+  border-radius: 10px;
+  background: var(--Base-White, #FFF);
+}
+#popup-wrapper .popup div .buttons label input {
+  outline: none;
+  border: none;
+  color: var(--Base-Black, #140A32);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+#popup-wrapper .popup div .buttons label p {
+  color: var(--Gray-Low, rgba(47, 43, 67, 0.4));
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+#popup-wrapper .popup div .buttons button {
+  display: flex;
+  padding: 16px 24px 18px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 10px;
+  background: var(--Base-Black, #140A32);
+  color: var(--Base-White, #FFF);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border: none;
+  cursor: pointer;
+}
+#popup-wrapper .popup div .buttons button:hover {
+  background: #000000;
+  transition: all 0.2s linear;
+}
+#popup-wrapper .popup div p:last-child {
+  color: var(--Gray-Low, rgba(47, 43, 67, 0.4));
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-left: 18px;
+}
+#popup-wrapper .popup_succes {
+  display: none;
+  position: fixed;
+  z-index: 11199;
+  width: 896px;
+  height: 397px;
+  border-radius: 20px;
+  background: var(--Base-White, #FFF);
+  box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 0 auto;
+  padding: 60px 200px;
+  text-align: center;
+  margin-left: 120px;
+}
+#popup-wrapper .popup_succes h4 {
+  color: var(--Base-Black, #140A32);
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: -0.96px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+#popup-wrapper .popup_succes p {
+  color: var(--Base-Black, #140A32);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 25.6px */
+  margin-bottom: 30px;
+}
+#popup-wrapper .popup_succes button {
+  display: block;
+  margin: 0 auto;
+  padding: 16px 36px 18px 36px;
+  gap: 10px;
+  border-radius: 10px;
+  background: var(--green, #33836E);
+  border: none;
+  cursor: pointer;
+  color: var(--Base-White, #FFF);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+#popup-wrapper .popup_succes button:hover {
+  transition: all 0.2s linear;
+  background: #08221b;
+}
+#popup-wrapper .popup_succes span:last-child {
+  cursor: pointer;
+  top: 20px;
+  right: 20px;
+  position: absolute;
+}
+#popup-wrapper .colorfon {
+  background: rgba(0, 0, 0, 0.7333333333);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+}
+
+@media only screen and (max-width: 390px) {
+  #popup-wrapper {
+    height: 100% !important;
+    width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    padding-top: 70px !important;
+    z-index: 99999999999;
+  }
+  #popup-wrapper .popup {
+    margin: 0 !important;
+    width: 390px !important;
+    height: 727px !important;
+  }
+  #popup-wrapper .popup img:first-child {
+    position: absolute;
+    width: 228px;
+    height: 232px;
+    object-fit: cover !important;
+    bottom: 0;
+    left: -30px;
+  }
+  #popup-wrapper .popup div {
+    width: 100%;
+  }
+  #popup-wrapper .popup div h4 {
+    font-size: 22px;
+    width: 314px;
+    text-align: center;
+    margin-left: 50px;
+  }
+  #popup-wrapper .popup div .imgs {
+    width: 100%;
+    position: absolute;
+    bottom: 130px;
+    left: 230px;
+  }
+  #popup-wrapper .popup div .imgs p {
+    display: none;
+  }
+  #popup-wrapper .popup div .imgs img {
+    position: absolute;
+    width: 160px !important;
+    object-fit: cover;
+    height: 40px !important;
+  }
+  #popup-wrapper .popup div .buttons {
+    flex-direction: column;
+  }
+  #popup-wrapper .popup div .buttons label {
+    display: block;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  #popup-wrapper .popup div .buttons button {
+    width: 100%;
+  }
+  #popup-wrapper .popup_succes {
+    width: 390px !important;
+    height: 100% !important;
+    padding: 0 !important;
+    margin: 0 !important;
   }
 }
 .footer_title {
