--- a/scss/all/_hotlinii.scss
+++ b/scss/all/_hotlinii.scss
@@ -87,6 +87,10 @@
             }
 
             button{
+                &:hover{
+                    background: #0c331c;
+                    transition: all 0.2s linear;
+                }
                 color: var(--Base-White, #FFF);
                 text-align: center;
                 font-size: 16px;
