--- a/scss/all/_quessionsWe.scss
+++ b/scss/all/_quessionsWe.scss
@@ -70,6 +70,10 @@
         }
 
         button{
+            &:hover{
+                background: #0c331c;
+                transition: all 0.2s linear;
+            }
             color: var(--Base-White, #FFF);
             text-align: center;
             font-size: 16px;
