--- a/scss/all/_container.scss
+++ b/scss/all/_container.scss
@@ -2,3 +2,9 @@
     max-width: 1140px;
     margin:  0 auto;
 }
+
+@media only screen and (max-width: 768px){
+    .container{
+        max-width: 768px;
+    }
+}
